--- a/web/header.html
+++ b/web/header.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <div id="post-it"></div>
+
     <div id="lcd" class="center-horizontal">
         <object type="image/svg+xml" data="lcd_dot_matrix.svg"></object>
 
