post its working

--- a/web/header.html
+++ b/web/header.html
@@ -10,6 +10,7 @@
 
 <body>
     <div id="post-it"></div>
+    <div id="post-it"></div>
 
     <div id="lcd" class="center-horizontal">
         <object type="image/svg+xml" data="lcd_dot_matrix.svg"></object>
