--- a/web/static/header.html
+++ b/web/static/header.html
@@ -13,7 +13,7 @@
     <div id="post-it"></div>
 
     <div id="lcd" class="center-horizontal">
-        <object type="image/svg+xml" data="lcd_dot_matrix.svg"></object>
+        <object type="image/svg+xml" data="assets/lcd_dot_matrix.svg"></object>
 
         <div id="lcd-matrix" class="center">
             <p></p>
