--- a/web/static/parsed_markdown/isospin.html
+++ b/web/static/parsed_markdown/isospin.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html><head><link rel="stylesheet" href="text.css"></head><body><h1>Isospin</h1>
-<p>Hello, yes this is in fact the website you are looking at currently. That's cool i guess.</p>
-<p>uhhhhh yeah. yep. mhm. yep</p>
-</body>
+<!DOCTYPE html><head><link rel="stylesheet" href="text.css"></head><body><div class="md"><h1>Isospin</h1>
+<p><a href="https://wakatime.com/badge/user/4b6581a3-5d2c-4e5d-9be1-63e7bb07270d/project/7867fba2-41b6-4e7c-9f9b-c37d18db6a65"><img src="https://wakatime.com/badge/user/4b6581a3-5d2c-4e5d-9be1-63e7bb07270d/project/7867fba2-41b6-4e7c-9f9b-c37d18db6a65.svg" alt="wakatime" /></a> <a href="https://github.com/aspiringLich/isospin">source</a></p>
+<p>Hello, yes this is in fact the website you are looking at currently. This took forever to make so yes it <em>does</em> deserve a spot on the projects page .</p>
+<p>I did learn one lesson from this endeavour, that is I don't want to become a front end web developer. This was kinda fun but god; Designing anything, for me at least, takes forever and it's frustrating and annoying because I can't do it for 6 hours straight without getting diminishing returns. Not a good way to waste your 3 day weekend me, because you just waste half of it trying random stuff that doesn't work.</p>
+<p>Anyway I did quite enjoy learning how to setup the backend, using a friend's web server <a href="https://github.com/Basicprogrammer10/afire">(afire)</a>. It is the only web framework I have ever used but idk seems pretty good. Go check it out and ignore the spelling mistakes :sweat_smile:.</p>
+<p>With web development i realise you can just copy and paste some code from the first article you find when you google <code>Collestt CSS EFFects!!1!one</code> and slap that on your website to wow people. I didn't want to do that so I can maintain a veil of superiority over the strawmen I have constructed and am now laughing at. So tl;dr: this website is made by me. No copy pasting from codepen. Just a bit of copy pasting from stack overflow.</p>
+</div></body>
