--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-black">
+	<body data-sveltekit-preload-data="hover" class="bg-black m-0 overflow-clip">
 		<div class="contents">%sveltekit.body%</div>
 	</body>
 </html>
